debug option for pretty-printing

--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,10 @@ license = Artistic_2_0
 copyright_holder = Robert Norris
 copyright_year   = 2006
 
-version = 0.03
+version = 0.04
 
 [MetaResources]
-bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=XML-Spice
+bugtracker.web    = https://github.com/robn/XML-Spice/issues
 bugtracker.mailto = bug-xml-spice@rt.cpan.org
 repository.web    = http://github.com/robn/XML-Spice
 repository.url    = git://github.com/robn/XML-Spice.git
@@ -33,3 +33,7 @@ Carp = 0
 [Prereqs / TestRequires]
 Test::More = 0
 Test::XML = 0
+
+[OptionalFeature / PrettyPrinting ]
+-description = Pretty printing
+XML::Tidy::Tiny = 0
