--- a/dist.ini
+++ b/dist.ini
@@ -1,39 +1,31 @@
 name    = XML-Spice
 author  = Robert Norris <rob@eatenbyagrue.org>
-license = Artistic_2_0
+license = Perl_5
 copyright_holder = Robert Norris
-copyright_year   = 2006
+copyright_year = 2016
 
 version = 0.04
 
-[MetaResources]
-bugtracker.web    = https://github.com/robn/XML-Spice/issues
-bugtracker.mailto = bug-xml-spice@rt.cpan.org
-repository.web    = http://github.com/robn/XML-Spice
-repository.url    = git://github.com/robn/XML-Spice.git
-repository.type   = git
-
 [@Basic]
 
-[MetaJSON]
-[PkgVersion]
-[PodVersion]
-
-[NextRelease]
-format = %-9v %{MMM dd yyyy}d
-
-[PruneFiles]
-filenames = dist.ini
-
-[@Git]
-
-[Prereqs]
-Carp = 0
-
-[Prereqs / TestRequires]
-Test::More = 0
-Test::XML = 0
+[AutoPrereqs]
 
 [OptionalFeature / PrettyPrinting ]
 -description = Pretty printing
 XML::Tidy::Tiny = 0
+
+[PkgVersion]
+die_on_existing_version = 1
+die_on_line_insertion   = 1
+[MetaConfig]
+[MetaJSON]
+[NextRelease]
+
+[GithubMeta]
+issues = 1
+
+[@Git]
+tag_format = %v
+
+[ReadmeAnyFromPod / MarkdownInRoot]
+filename = README.md
