Add Travis CI hooks

--- a/dist.ini
+++ b/dist.ini
@@ -26,6 +26,9 @@ issues = 1
 
 [@Git]
 tag_format = %v
+allow_dirty = .travis.yml
+
+[TravisYML]
 
 [ReadmeAnyFromPod / MarkdownInRoot]
 filename = README.md
