Update to my lastest dzil setup

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,11 @@ copyright_year = 2016
 
 version = 0.04
 
-[@Basic]
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+[GatherDir]
+exclude_filename = Makefile.PL
 
 [AutoPrereqs]
 
@@ -26,9 +30,15 @@ issues = 1
 
 [@Git]
 tag_format = %v
+allow_dirty = Changes
+allow_dirty = dist.ini
+allow_dirty = Makefile.PL
 allow_dirty = .travis.yml
 
 [TravisYML]
 
 [ReadmeAnyFromPod / MarkdownInRoot]
 filename = README.md
+
+[CopyFilesFromBuild]
+copy = Makefile.PL
